ISSUE-655 fix(itip): filter blank/null recipients during local delivery deserialize (#678)