@@ -18,10 +18,22 @@
 
 package com.linagora.calendar.amqp;
 
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
+import org.apache.commons.lang3.StringUtils;
+
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.JsonToken;
+import com.fasterxml.jackson.databind.DeserializationContext;
+import com.fasterxml.jackson.databind.JsonDeserializer;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 
 /**
  * AMQP message payload for the {@code calendar:itip:localDelivery} exchange.
@@ -38,7 +50,54 @@ public record ItipLocalDeliveryDTO(
     @JsonProperty("message") String message,
     @JsonProperty("oldMessage") Optional<String> oldMessage,
     @JsonProperty("hasChange") boolean hasChange,
+    @JsonDeserialize(using = RecipientListDeserializer.class)
     @JsonProperty("recipients") List<String> recipients) {
+
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().registerModule(new Jdk8Module());
+
+    public static byte[] serialize(ItipLocalDeliveryDTO dto) {
+        try {
+            return OBJECT_MAPPER.writeValueAsBytes(dto);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to serialize ItipLocalDeliveryDTO for uid " + dto.uid(), e);
+        }
+    }
+
+    public static ItipLocalDeliveryDTO deserialize(byte[] payload) {
+        try {
+            return OBJECT_MAPPER.readValue(payload, ItipLocalDeliveryDTO.class);
+        } catch (Exception e) {
+            String preview = new String(payload, StandardCharsets.UTF_8);
+            throw new RuntimeException("Failed to deserialize ItipLocalDeliveryDTO: " + StringUtils.left(preview, 512), e);
+        }
+    }
+
+    private static class RecipientListDeserializer extends JsonDeserializer<List<String>> {
+        @Override
+        public List<String> deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
+            if (!p.isExpectedStartArrayToken()) {
+                p.skipChildren();
+                return List.of();
+            }
+
+            List<String> recipients = new ArrayList<>();
+
+            JsonToken token;
+            while ((token = p.nextToken()) != JsonToken.END_ARRAY) {
+                if (token != JsonToken.VALUE_STRING) {
+                    p.skipChildren();
+                    continue;
+                }
+
+                String recipient = StringUtils.trimToNull(p.getValueAsString());
+                if (recipient == null) {
+                    continue;
+                }
+                recipients.add(recipient);
+            }
+            return List.copyOf(recipients);
+        }
+    }
 
     /** Returns a copy of this DTO with a single recipient (used during fan-out). */
     public ItipLocalDeliveryDTO withSingleRecipient(String recipient) {
@@ -52,7 +111,7 @@ public record ItipLocalDeliveryDTO(
 
     /** Strips the {@code mailto:} prefix from the single recipient address. */
     public String strippedRecipient() {
-        return stripMailto(recipients.get(0));
+        return stripMailto(recipients.getFirst());
     }
 
     private static String stripMailto(String address) {
